k8s-configs/api-gateway-chart/templates/api-gateway-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: api-gateway
  labels:
    app: api-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  serviceName: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - name: api-gateway
          image: ilyeszaidi/swiggy-gateway-api:0.0.2
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 100Mi # adjust size as needed




---

apiVersion: v1
kind: Service
metadata:
  name: cloud-gateway-svc
spec:
  type: NodePort
  ports:
  - protocol: TCP
    targetPort: 8080
    port: 9191
    nodePort: 30500  # Choose any available port in the range 30000-32767
  type: NodePort
  selector:
    app: api-gateway

---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-lb
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: api-gateway

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway-ingress
  annotations:
    # Use appropriate annotations for your ingress controller, e.g., for nginx:
    kubernetes.io/ingress.clas: "nginx"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS, DELETE"
    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,X-CustomHeader,X-LANG,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,X-Api-Key,X-Device-Id,Access-Control-Allow-Origin"
spec:
  rules:
    - host: "esprit-stages.com"  # Change to your actual domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway-lb
                port:
                  number: 80
